Bug 651197 - message/rfc822 attachment encoded in base64 parsed correctly

Closes https://bugzilla.gnome.org/show_bug.cgi?id=651197